
  News group:              gmane.emacs.viewmail on news.gmane.org  
                           (gnu.emacs.vm.info is defunct)
  
  Please DO NOT use the Usenet newsgroup gnu.emacs.vm.info because it has an
  unreliable mail link to the mailing list.  You can however browse the
  archives of the newsgroup at Google Groups.
  
VM 8.2.0b1

  CHANGES

   * New command `vm-mail-from-folder' (bound to `m' in VM).  It is like
     `vm-mail', but depends on the current folder as its parent folder and
     the current message as its parent message.  Setting the variable
     `vm-mail-use-sender-address' to `t' causes the command to pick up the
     sender of the current message as the recipient of the new message.

   * New variables `vm-use-presentation-minor-modes' and
     `vm-presentation-minor-modes' control the minor modes to be used with
     presentation text prepared by other tools such as emacs-w3m.  The
     old variable `vm-w3m-use-w3m-minor-mode-map' is obsolete.

   * The variable `vm-mutable-frames' renamed to
     `vm-mutable-frame-configuration' to convey its sense better.  The old
     name still works.

   * Invoking `vm-auto-archive-messages' requires an additional confirmation
     to guard against accidental invocation.  Set the variable
     `vm-confirm-for-auto-archive' to nil to turn this off.

   * `vm-mark-matching-messages' renamed to `vm-mark-messages-by-selector'
     and all related commands renamed similarly.  The old names will
     continue to work.

   IMPROVEMENTS

   * Added support for Secure MIME (S/MIME) signatures and encryption (still
     experimental at this stage).  See the info section on Secure MIME.  To
     enable the verification of S/MIME signatures, set the variable
     `vm-mime-verify-signatures' to t.  Thanks to Arik Mitschang for this
     contribution.

   * Quitting an interactive virtual folder using `vm-quit-no-change'
     prevents VM from changing the message pointer in the underlying folder.
